update repository URL in app.yaml and fix indentation in virtual-service.yaml

--- a/deploy/app.yaml
+++ b/deploy/app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: git@github.com:k0wl0n/echo-app-cicd.git
+    repoURL: git@github.com:reganputra/go-ci-cd.git
     targetRevision: main
     path: deploy
   destination:
